feat: update vimium themes

--- a/mackup/vimium/vimium-nord.css
+++ b/mackup/vimium/vimium-nord.css
@@ -112,7 +112,7 @@ div.vimiumHUD .vimiumHUDSearchAreaInner {
 #vomnibar .vomnibarSearchArea {
   display: block;
   padding: 10px;
-  background-color: #6272a4;
+  background-color: #ffffff;
   border-radius: 4px 4px 0 0;
   border-bottom: 0px solid #bd93f9;
 }
